--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
  <!-- Search input -->
  <center>
   <h1 style="text-align:center">
-   Sean Gilder Search
+   Angela Shelton Search
   </h1>
   <input type="text" id="searchInput" placeholder="Enter your search here..." style="width:80%;display:inline-block;background-color:#DDD!important">
   <br>
@@ -19,8 +19,8 @@
   <br>
   <div id="settings" class="hidden">
    <label class="container">
-    Sean Gilder
-    <input type="checkbox" checked="checked" id="Sean_Gilder" value="on">
+    Angela Shelton
+    <input type="checkbox" checked="checked" id="Angela_Shelton" value="on">
     <span class="checkmark">
     </span>
    </label>
