--- a/index.html
+++ b/index.html
@@ -183,12 +183,12 @@ function performSearch() {
   document.getElementById("loader").style.display = "inline-block"
   document.getElementById("results").style.display = "none"
   // Perform the API call
-  fetch(`https://eoei1jzhp07l1kr.m.pipedream.net`,
+  fetch(`https://eopo278tp99o8r5.m.pipedream.net`,
   {
     method: "POST",
     body: JSON.stringify({
       query: searchTerm,
-      sources: "Sean_Gilder",
+      sources: "Angela_Shelton",
       //numberResults: numberResults
     })
   })
