--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ function performSearch() {
   // Get the search term from the input field
   const searchTerm = document.getElementById('searchInput').value;
   var sourceObject = {
-    ACIM: document.getElementById('Sean_Gilder').checked,
+    ACIM: document.getElementById('Angela_Shelton').checked,
     Bible: document.getElementById('Bible').checked,
     Dao: document.getElementById('Dao').checked
   }
