--- a/index.html
+++ b/index.html
@@ -7,11 +7,19 @@
   <h1 style="text-align:center">
    Angela Shelton Search
   </h1>
-  <input type="text" id="searchInput" placeholder="Enter your search here..." style="width:80%;display:inline-block;background-color:#DDD!important">
   <br>
-  <button onclick="performSearch()" id="search">
-   Search
-  </button>
+  <div class="search">
+
+          <input type="text"
+                 placeholder=" Enter your search here..."
+                 name="search" id="searchInput">
+          <button onclick="performSearch()" id="search">
+              <i class="fa fa-search"
+                 style="font-size: 18px;">
+              </i>
+          </button>
+
+  </div>
   <button onclick="showSettings()" style="display:none">
    Settings
   </button>
@@ -158,6 +166,30 @@
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
+
+  /* styling search bar */
+    .search input[type=text]{
+        width:300px;
+        height:25px;
+        border-radius:25px;
+        border: none;
+    }
+         
+    .search{
+        float:right;
+        margin:7px;
+    }
+         
+    .search button{
+        background-color: #0074D9;
+        color: #f2f2f2;
+        float: right;
+        padding: 5px 10px;
+        margin-right: 16px;
+        font-size: 12px;
+        border: none;
+        cursor: pointer;
+    } 
  </style>
  <script>
   // Function to perform search
