--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
  <!-- Search input -->
  <center>
-  <h1 style="text-align:center">
+  <h1 style="text-align:left">
    Angela Shelton Search
   </h1>
   <div class="search">
